fix(header): fix nav z-index

--- a/src/apps/admin-private/header/header.scss
+++ b/src/apps/admin-private/header/header.scss
@@ -50,6 +50,7 @@
   border-radius: 0 0 4px 4px;
   overflow: hidden;
   padding: $padding-unit / 4 0;
+  z-index: $z-index-nav;
 
   ul {
     margin: 0;
