--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,3 +30,4 @@ $header-height: 50px;
 
 $z-index-menu: 10;
 $z-index-toolbar: 20;
+$z-index-nav: 30;
